--- a/main.css
+++ b/main.css
@@ -63,6 +63,41 @@ a:hover {
 }
 
 .nav-link-style {
+    padding-bottom: 20px;
     border-bottom: 2px solid black;
     outline-offset: 15px;
+}
+
+#socials {
+  padding: 30px 0;
+  text-align: center;
+}
+
+.social-icon {
+  width: 30px;
+  height: 30px;
+}
+
+.block-filler {
+  background-color: black;
+  height: 600px;
+  width: 100%;
+}
+
+.block-filler2 {
+  background-color: black;
+  height: 350px;
+  width: 100%;
+}
+
+.para {
+  padding: 10px 0px 0px 20px;
+}
+
+textarea {
+  width: 99%;
+  min-height: 100px;
+  resize: vertical;
+  padding: 5px 0 0 5px;
+  font: inherit;
 }
