--- a/main.css
+++ b/main.css
@@ -72,7 +72,7 @@ a:hover {
     list-style:none;
     margin:0;
     padding:0;
-    text-align:center;
+    text-align: center;
 }
 .nav-bar li{
     display:inline;
@@ -88,6 +88,11 @@ a:hover {
     outline-offset: 15px;
 }
 
+.li_dot:before {
+content: "•";
+color: grey;
+}
+
 #socials {
   padding: 30px 0;
   text-align: center;
@@ -96,6 +101,7 @@ a:hover {
 .social-icon {
   width: 30px;
   height: 30px;
+  margin-left: 0.7em;
 }
 
 #sub-nav {
@@ -104,7 +110,7 @@ a:hover {
 
 .block-filler {
   background-color: black;
-  height: 600px;
+  height: 650px;
   width: 100%;
 }
 
@@ -179,7 +185,4 @@ textarea {
   resize: vertical;
   padding: 5px 0 0 5px;
   font: inherit;
-}
-.li_dot:before {
-content: ".";
 }
