--- a/main.css
+++ b/main.css
@@ -196,7 +196,7 @@ transition: .25s ease-in-out;
 }
 
 .animated-icon1 span {
-background: white;
+background: black;
 }
 
 .animated-icon2 span {
@@ -331,10 +331,16 @@ left: 8px;
 
 @media (max-width: 768px) {
   .navbar {
-    background-color: black;
+    background-color: #fff;
   }
   .nav-link {
-  color: #fff !important;
+  color: #000 !important;
+  }
+  #top-section {
+    display: none;
+  }
+  #socials {
+    display: none;
   }
 }
 
@@ -361,5 +367,8 @@ left: 8px;
   .li_dot:before {
   content: "•";
   color: grey;
+  }
+  #logo {
+    display: none;
   }
 }
