--- a/main.css
+++ b/main.css
@@ -69,7 +69,7 @@ a:hover {
 }
 
 #socials {
-  padding: 30px 0;
+  padding: 20px 0;
   text-align: center;
 }
 
@@ -77,19 +77,6 @@ a:hover {
   width: 30px;
   height: 30px;
   margin-left: 0.7em;
-}
-
-
-.block-filler {
-  background-color: black;
-  height: 650px;
-  width: 100%;
-}
-
-.block-filler2 {
-  background-color: black;
-  height: 350px;
-  width: 100%;
 }
 
 @media (min-width: 576px) {
@@ -161,7 +148,7 @@ textarea {
 
 /* Icon 1 */
 
-.animated-icon1, .animated-icon2, .animated-icon3 {
+.animated-icon1 {
 width: 30px;
 height: 20px;
 position: relative;
@@ -177,7 +164,7 @@ transition: .5s ease-in-out;
 cursor: pointer;
 }
 
-.animated-icon1 span, .animated-icon2 span, .animated-icon3 span {
+.animated-icon1 span {
 display: block;
 position: absolute;
 height: 3px;
@@ -196,15 +183,7 @@ transition: .25s ease-in-out;
 }
 
 .animated-icon1 span {
-background: black;
-}
-
-.animated-icon2 span {
-background: #e3f2fd;
-}
-
-.animated-icon3 span {
-background: #f3e5f5;
+background: #000;
 }
 
 .animated-icon1 span:nth-child(1) {
@@ -240,94 +219,7 @@ top: 11px;
 transform: rotate(-135deg);
 }
 
-/* Icon 3*/
 
-.animated-icon2 span:nth-child(1) {
-top: 0px;
-}
-
-.animated-icon2 span:nth-child(2), .animated-icon2 span:nth-child(3) {
-top: 10px;
-}
-
-.animated-icon2 span:nth-child(4) {
-top: 20px;
-}
-
-.animated-icon2.open span:nth-child(1) {
-top: 11px;
-width: 0%;
-left: 50%;
-}
-
-.animated-icon2.open span:nth-child(2) {
--webkit-transform: rotate(45deg);
--moz-transform: rotate(45deg);
--o-transform: rotate(45deg);
-transform: rotate(45deg);
-}
-
-.animated-icon2.open span:nth-child(3) {
--webkit-transform: rotate(-45deg);
--moz-transform: rotate(-45deg);
--o-transform: rotate(-45deg);
-transform: rotate(-45deg);
-}
-
-.animated-icon2.open span:nth-child(4) {
-top: 11px;
-width: 0%;
-left: 50%;
-}
-
-/* Icon 4 */
-
-.animated-icon3 span:nth-child(1) {
-top: 0px;
--webkit-transform-origin: left center;
--moz-transform-origin: left center;
--o-transform-origin: left center;
-transform-origin: left center;
-}
-
-.animated-icon3 span:nth-child(2) {
-top: 10px;
--webkit-transform-origin: left center;
--moz-transform-origin: left center;
--o-transform-origin: left center;
-transform-origin: left center;
-}
-
-.animated-icon3 span:nth-child(3) {
-top: 20px;
--webkit-transform-origin: left center;
--moz-transform-origin: left center;
--o-transform-origin: left center;
-transform-origin: left center;
-}
-
-.animated-icon3.open span:nth-child(1) {
--webkit-transform: rotate(45deg);
--moz-transform: rotate(45deg);
--o-transform: rotate(45deg);
-transform: rotate(45deg);
-top: 0px;
-left: 8px;
-}
-
-.animated-icon3.open span:nth-child(2) {
-width: 0%;
-opacity: 0;
-}
-
-.animated-icon3.open span:nth-child(3) {
--webkit-transform: rotate(-45deg);
--moz-transform: rotate(-45deg);
--o-transform: rotate(-45deg);
-transform: rotate(-45deg);
-top: 21px;
-left: 8px;
-}
 
 @media (max-width: 768px) {
   .navbar {
@@ -371,4 +263,14 @@ left: 8px;
   #logo {
     display: none;
   }
+  #dropdown {
+    display: none;
+  }
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+    outline: none;
+    box-shadow: none;
 }
