--- a/main.css
+++ b/main.css
@@ -18,11 +18,17 @@ h1 { font-size: 1rem; }
     .index-container {
       padding: 0 48px;
     }
+    .main-container {
+      padding: 0 48px;
+    }
 }
 @media (min-width: 768px) {
     h1 { font-size: 3rem;
     }
     .index-container {
+      padding: 0 64px;
+    }
+    .main-container {
       padding: 0 64px;
     }
 }
@@ -32,6 +38,9 @@ h1 { font-size: 1rem; }
     .index-container {
       padding: 0 83px;
     }
+    .main-container {
+      padding: 0 83px;
+    }
 }
 @media (min-width: 1200px) {
     h1 { font-size: 3.7rem;
@@ -39,42 +48,15 @@ h1 { font-size: 1rem; }
     .index-container {
         padding: 0 400px;
       }
+      .main-container {
+        padding: 0 100px;
+      }
 }
 
-@media (min-width: 576px) {
-  .main-container {
-    padding: 0 48px;
-  }
-}
-@media (min-width: 768px) {
-  .main-container {
-    padding: 0 64px;
-  }
-}
-@media (min-width: 992px) {
-  .main-container {
-    padding: 0 83px;
-  }
-}
-@media (min-width: 1200px) {
-  .main-container {
-    padding: 0 100px;
-  }
-}
+
+
 
 @media (max-width: 768px) {
-  .navbar {
-    background-color: #fff;
-  }
-  .nav-link {
-  color: #000 !important;
-  }
-  #top-section {
-    display: none;
-  }
-  #socials {
-    display: none;
-  }
   #nav-bar {
     padding-right: 0.75rem;
   }
@@ -113,7 +95,7 @@ h1 { font-size: 1rem; }
   .hide-big {
     display: none;
   }
-  .hide-small {
+  .inline-block {
     display: inline-block;
   }
 
