--- a/main.css
+++ b/main.css
@@ -15,9 +15,8 @@ h1 { font-size: 1rem; }
 @media (min-width: 576px) {
     h1 { font-size: 2.5rem;
     }
-    .index-container {
-      padding: 0 48px;
-    }
+    .index-container
+    .about-container
     .main-container {
       padding: 0 48px;
     }
@@ -25,9 +24,8 @@ h1 { font-size: 1rem; }
 @media (min-width: 768px) {
     h1 { font-size: 3rem;
     }
-    .index-container {
-      padding: 0 64px;
-    }
+    .index-container
+    .about-container
     .main-container {
       padding: 0 64px;
     }
@@ -63,9 +61,8 @@ h1 { font-size: 1rem; }
 @media (min-width: 992px) {
     h1 { font-size: 3.7rem;
     }
-    .index-container {
-      padding: 0 83px;
-    }
+    .index-container
+    .about-container
     .main-container {
       padding: 0 83px;
     }
@@ -75,14 +72,14 @@ h1 { font-size: 1rem; }
     }
     .index-container {
         padding: 0 400px;
-      }
-      .main-container {
+    }
+    .main-container {
         padding: 0 100px;
-      }
+    }
+    .about-container {
+        padding: 0 200px;
+    }
 }
-
-
-
 
 @media (max-width: 768px) {
   #nav-bar {
@@ -91,6 +88,9 @@ h1 { font-size: 1rem; }
   .hide-small {
     display: none;
   }
+  /*#profile {
+    width: 50%;
+  }*/
 }
 
 body {
@@ -231,6 +231,20 @@ transform: rotate(-135deg);
 #nav-bar {
   text-align: right;
   float: right;
+}
+
+.flex-row {
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
+.social-padding {
+  margin: 10px 20px 15px 20px;
+}
+
+i {
+  display: inline-block;
+  margin-left: 0.3em;
 }
 
 
