--- a/main.css
+++ b/main.css
@@ -83,14 +83,11 @@ h1 { font-size: 1rem; }
 
 @media (max-width: 768px) {
   #nav-bar {
-    padding-right: 0.75rem;
+   padding-right: 0.75rem;
   }
   .hide-small {
     display: none;
   }
-  /*#profile {
-    width: 50%;
-  }*/
 }
 
 body {
@@ -267,6 +264,6 @@ i {
 }
 
 #coming-soon {
-  font-size: 10em;
+  font-size: 10vw;
   padding-top: 20vh;
 }
