--- a/main.css
+++ b/main.css
@@ -13,7 +13,10 @@ html {
 h1 { font-size: 1rem; }
 
 @media (min-width: 576px) {
-    h1 { font-size: 2.5rem;
+    h1 { font-size: 2rem;
+    }
+    #header-mobile {
+      font-size: 4.5vw
     }
     .index-container
     .about-container
@@ -87,6 +90,9 @@ h1 { font-size: 1rem; }
   }
   .hide-small {
     display: none;
+  }
+  #header-img-mobile {
+    width: 35px;
   }
 }
 
@@ -264,6 +270,6 @@ i {
 }
 
 #coming-soon {
-  font-size: 10vw;
+  font-size: 3.5vw;
   padding-top: 20vh;
 }
