--- a/main.css
+++ b/main.css
@@ -10,7 +10,6 @@ html {
   font-size: 100%;
 }
 
-
 h1 { font-size: 1rem; }
 
 @media (min-width: 576px) {
@@ -34,6 +33,7 @@ h1 { font-size: 1rem; }
       padding: 0 64px;
     }
     #nav-bar{
+      font-size: 0.9rem;
       list-style:none;
       margin:0;
       padding:0;
@@ -64,6 +64,9 @@ h1 { font-size: 1rem; }
 }
 @media (min-width: 992px) {
     h1 { font-size: 3.7rem;
+    }
+    #nav-bar {
+      font-size: 1rem;
     }
     .index-container
     .about-container
