--- a/main.css
+++ b/main.css
@@ -15,9 +15,6 @@ h1 { font-size: 1rem; }
 @media (min-width: 576px) {
     h1 { font-size: 2rem;
     }
-    #header-mobile {
-      font-size: 4vw
-    }
     .index-container
     .about-container
     .main-container {
@@ -97,6 +94,9 @@ h1 { font-size: 1rem; }
   }
   #header-img-mobile {
     width: 35px;
+  }
+  #header-mobile {
+    font-size: 4vw;
   }
 }
 
