--- a/main.css
+++ b/main.css
@@ -275,6 +275,26 @@ i {
     box-shadow: none;
 }
 
+.contact {
+  font-weight: bold;
+}
+
+#submit {
+  display: block;
+  width: 50%;
+  height: 25px;
+  border-radius: 2px;
+  background-color: grey;
+  border: none;
+}
+#submit:hover {
+  background-color: darkgrey;
+  text-decoration: underline;
+}
+#submit-div {
+  min-height: 50px;
+}
+
 #coming-soon {
   font-size: 3.5vw;
   padding-top: 20vh;
