--- a/main.css
+++ b/main.css
@@ -85,7 +85,7 @@ h1 { font-size: 1rem; }
     }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   #nav-bar {
    padding-right: 0.75rem;
   }
@@ -302,4 +302,9 @@ i {
 .coming-soon {
   padding-top: 10vh;
   font-size: 4.5rem;
+}
+
+.carousel-inner{
+  width:100%;
+  max-height: 900px !important;
 }
