--- a/main.css
+++ b/main.css
@@ -43,11 +43,11 @@ h1 { font-size: 1rem; }
       display:inline-block;
       padding:0 50px;
     }
-    .nav-link-style {
+    /*.nav-link-style {
         padding-bottom: 20px;
         border-bottom: 2px solid black;
         outline-offset: 15px;
-    }
+    }*/
     .li_dot:before {
     content: "•";
     color: grey;
@@ -75,7 +75,7 @@ h1 { font-size: 1rem; }
     h1 { font-size: 3.7rem;
     }
     .index-container {
-        padding: 0 150px;
+        padding: 0 350px;
     }
     .main-container {
         padding: 0 100px;
